# local_planner_reinforcement_learning

./: .gitignore  README.md  gazebo_env.py  isaac_env.py  ros_utils.py  train_test.py
cfg/: easy_difficulty_env _isaac.yaml  easy_difficulty_env.yaml  easy_difficulty_env_isaac.yaml  omni.isaac.sim.python.kit
gz_pkg/: CMakeLists.txt  package.xml
gz_pkg/drl/: cfg
gz_pkg/sdf/cylinder/: model.sdf
gz_pkg/sdf/lscm/: model.config  model.sdf
gz_pkg/sdf/mbox/: model.config  model.sdf
gz_pkg/sdf/room_8/: model.config  model.sdf
gz_pkg/sdf/turtlerobot/: model.config  model.sdf
network/: network_rl.py
scan_img/: CMakeLists.txt  package.xml
scan_img/include/: gs_common.h  scan_image.h
scan_img/launch/: lscm.launch  nodes.launch
scan_img/msg/: RobotState.msg
scan_img/script/: send_data.py
scan_img/src/: scan_image.cpp
simulator/: __init__.py  env.py  gazebo_env.py  gz_ros.py  isaac_env.py  isaac_ros.py  isaac_ros_tf.py  isaac_ros_tf2.py  soap.py  test_env.py  test_robot.py
test_bench/: ddpg_run.py  dqn_run.py  dqn_run_isaac.py  dqn_run_isaac_test.py
utils/: logger.py  ros_utils.py
